<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">C@tchMe</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_messages">Messages</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_overflow">Settings</string>
    <string name="write_message">Write message</string>
    <string name="message_image_description">Sender image</string>
    <string name="tab_title_messages">Messages</string>
    <string name="tab_title_contacts">Contacts</string>
    <string name="tab_title_map">Positions</string>
    <string name="tab_title_profile">Profile</string>
    <string name="message_sendBtn">Send</string>
    <string name="all_button">All contacts</string>
    <string name="all">ALL</string>
    <string name="accepted_button">Accepted contacts</string>
    <string name="sent_button">Sent invitations</string>
    <string name="received_button">Received invitations</string>
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="action_refresh">Refresh</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="err_no_internet">There is no Internet connection</string>
    <string name="current_user_avatar">Avatar</string>
    <string name="action_filter">Filter</string>
    <string name="contact_email">Write friend email</string>
    <string name="new_contact_add_button">Add contact</string>
    <string name="cancel">Cancel</string>
    <string name="bad_email">Wrong email format</string>
    <string name="profile_accept">Accept</string>
    <string name="login">Login</string>
    <string name="register_accept">Sign In</string>
    <string name="reg_title">Register Form</string>
    <string name="hint_email">E-Mail Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_conf_pass">Confirm Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="goto_register">Join Now!</string>
    <string name="profile_reject">Reject</string>
    <string name="new_messages">new messages</string>
    <string name="reg_title1">Step 1 / 2</string>
    <string name="reg_title2">Step 2 / 2</string>
    <string name="icon_name">Icon name</string>
    <string name="icon_surname">Icon surname</string>
    <string name="icon_email">Icon email</string>
    <string name="icon_password">Icon password</string>
    <string name="icon_conf_pass">Icon confirm password</string>
    <string name="register_nextStep">Next Step</string>
    <string name="choose_sex">Choose gender</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>

</resources>