<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_scroll_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="450dp" >

        <RelativeLayout
            android:id="@+id/register_logo_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp" >

            <TextView
                android:id="@+id/reg_form_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/reg_title1"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/register_mainContainer"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_centerVertical="true"
            android:layout_marginBottom="2dp" >

            <RelativeLayout
                android:id="@+id/register_borderContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/border_form_bold" >

                <RelativeLayout
                    android:id="@+id/reg_email_container"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp" >

                    <EditText
                        android:id="@+id/reg_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="3dp"
                        android:layout_marginRight="3dp"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:minWidth="200dp" >
                    </EditText>

                    <ImageView
                        android:id="@+id/reg_icon_email"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/reg_email"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/icon_email"
                        android:src="@drawable/icon_email" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/reg_pass_container"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/reg_email_container"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp" >

                    <EditText
                        android:id="@+id/reg_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="3dp"
                        android:layout_marginRight="3dp"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:minWidth="200dp" >
                    </EditText>

                    <ImageView
                        android:id="@+id/reg_icon_pass"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/reg_pass"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/icon_password"
                        android:src="@drawable/icon_password" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/reg_pass_conf_container"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/reg_pass_container"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp" >

                    <EditText
                        android:id="@+id/reg_pass_conf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="3dp"
                        android:layout_marginRight="3dp"
                        android:hint="@string/hint_conf_pass"
                        android:inputType="textPassword"
                        android:minWidth="200dp" />

                    <ImageView
                        android:id="@+id/reg_icon_conf_pass"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/reg_pass_conf"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/icon_conf_pass"
                        android:src="@drawable/icon_password" />
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/loginbutton_bg"
            android:text="@string/register_nextStep" />

        <ProgressBar
            android:id="@+id/register_spinner"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

</ScrollView>