<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register2ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:id="@+id/reg_data_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="450dp" >

        <RelativeLayout
            android:id="@+id/reg_logo_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp" >

            <TextView
                android:id="@+id/reg_form_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/reg_title2"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/reg_data_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" >

            <RelativeLayout
                android:id="@+id/reg_image_container"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="2dp" >

                <com.catchme.utils.RoundedImageView
                    android:id = "@+id/user_avatar"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/catch_me" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/register_borderContainer"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reg_image_container"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/border_form_bold" >

                <RelativeLayout
                    android:id="@+id/reg_name_container"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp" >

                    <EditText
                        android:id="@+id/reg_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="3dp"
                        android:hint="@string/hint_name"
                        android:inputType="text"
                        android:minWidth="200dp" />

                    <ImageView
                        android:id="@+id/reg_icon_name"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/reg_name"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/icon_name"
                        android:src="@drawable/icon_user" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/reg_surname_container"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/reg_name_container"
                    android:layout_marginBottom="2dp" >

                    <EditText
                        android:id="@+id/reg_surname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="3dp"
                        android:hint="@string/hint_surname"
                        android:inputType="text"
                        android:minWidth="200dp" />

                    <ImageView
                        android:id="@+id/reg_icon_surname"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/reg_surname"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/icon_surname"
                        android:src="@drawable/icon_user" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/reg_upload_container"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/reg_surname_container"
                    android:layout_marginBottom="2dp" >

                    <EditText
                        android:id="@+id/reg_image_upload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="3dp"
                        android:inputType="text"
                        android:minWidth="200dp" />

                    <ImageView
                        android:id="@+id/reg_icon_upload"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/reg_image_upload"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/icon_surname"
                        android:src="@drawable/icon_avatar_upload" />
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/loginbutton_bg"
            android:text="@string/register_accept" />

        <ProgressBar
            android:id="@+id/register_spinner"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

</ScrollView>